--- a/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
+++ b/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
@@ -35,7 +35,8 @@
             </x:Code>
             <DataTemplate DataType="{x:Type vm:VishnuViewModelBase}">
                 <Border Name="ItemBorder" Background="Transparent" MouseDown="ItemBorder_MouseDown" Visibility="{Binding Visibility}">
-                    <Grid ToolTip="{Binding NextRunInfoAndResult}" ToolTipService.ShowDuration="30000" ToolTipService.InitialShowDelay="1400">
+                    <Grid Name="MainGrid" ToolTip="{Binding NextRunInfoAndResult}" ToolTipService.ShowDuration="30000" ToolTipService.InitialShowDelay="1400"
+                          ContextMenu="{DynamicResource cmContextMenu}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
