--- a/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
+++ b/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
@@ -36,7 +36,7 @@
             <DataTemplate DataType="{x:Type vm:VishnuViewModelBase}">
                 <Border Name="ItemBorder" Background="Transparent" MouseDown="ItemBorder_MouseDown" Visibility="{Binding Visibility}">
                     <Grid Name="MainGrid" ToolTip="{Binding NextRunInfoAndResult}" ToolTipService.ShowDuration="30000" ToolTipService.InitialShowDelay="1400"
-                          ContextMenu="{DynamicResource cmContextMenu}">
+                          ContextMenu="{StaticResource cmContextMenu}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
                             <ColumnDefinition Width="Auto" />
@@ -89,8 +89,8 @@
                                 </Button>
                             </Grid>
                             <Ellipse Name="ColorRing" Grid.Row="0" Grid.Column="1" Margin="3"
-                                 Width="{DynamicResource ColorRing.Width}"
-                                 Height="{DynamicResource ColorRing.Width}">
+                                 Width="{StaticResource ColorRing.Width}"
+                                 Height="{StaticResource ColorRing.Width}">
                                 <Ellipse.Fill>
                                     <MultiBinding Converter="{StaticResource nullableBoolToBrush, diag:PresentationTraceSources.TraceLevel=High}">
                                         <Binding Path="Logical" />
@@ -99,8 +99,8 @@
                                 </Ellipse.Fill>
                             </Ellipse>
                             <Ellipse Name="ColorPoint" Grid.Row="0" Grid.Column="1" Margin="3"
-                                 Width="{DynamicResource ColorPoint.Width}"
-                                 Height="{DynamicResource ColorPoint.Width}">
+                                 Width="{StaticResource ColorPoint.Width}"
+                                 Height="{StaticResource ColorPoint.Width}">
                                 <Ellipse.Fill>
                                     <MultiBinding Converter="{StaticResource nullableBoolToBrush, diag:PresentationTraceSources.TraceLevel=High}">
                                         <Binding Path="LastNotNullLogical" />
