--- a/SingleNodeUserControl_CheckServerDemo/App.xaml
+++ b/SingleNodeUserControl_CheckServerDemo/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:SingleNodeUserControl_CheckServerDemo"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Vishnu.WPF_UI;component/Assets/LogicalTaskTreeControlStaticResourceDictionary.xaml" />
+                <ResourceDictionary Source="/Vishnu.WPF_UI;component/Assets/LogicalTaskTreeControlResourceDictionary.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
