--- a/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
+++ b/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
@@ -1,4 +1,4 @@
-﻿<base:DynamicUserControlBase x:Class="SingleNodeUserControl_CheckServer.SingleNodeUserControl_CheckServer"
+﻿<vm:DynamicUserControlBase x:Class="SingleNodeUserControl_CheckServer.SingleNodeUserControl_CheckServer"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -13,7 +13,7 @@
              xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <base:DynamicUserControlBase.Resources>
+    <vm:DynamicUserControlBase.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Vishnu.WPF_UI;component/Assets/LogicalTaskTreeControlStaticResourceDictionary.xaml" />
@@ -178,6 +178,6 @@
                 </DataTemplate.Triggers>
             </DataTemplate>
         </ResourceDictionary>
-    </base:DynamicUserControlBase.Resources>
-    <ContentControl Content="{Binding}" Loaded="ContentControl_Loaded" />
-</base:DynamicUserControlBase>
+    </vm:DynamicUserControlBase.Resources>
+    <ContentControl Content="{Binding}" />
+</vm:DynamicUserControlBase>
