--- a/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
+++ b/SingleNodeUserControl_CheckServer/SingleNodeUserControl_CheckServer.xaml
@@ -35,7 +35,7 @@
             </x:Code>
             <DataTemplate DataType="{x:Type vm:VishnuViewModelBase}">
                 <Border Name="ItemBorder" Background="Transparent" MouseDown="ItemBorder_MouseDown" Visibility="{Binding Visibility}">
-                    <Grid Name="MainGrid"  ToolTip="{StaticResource cmToolTip}"
+                    <Grid Name="MainGrid"
                           ContextMenu="{StaticResource cmContextMenu}">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
@@ -48,7 +48,7 @@
                             <RowDefinition Height="1" />
                             <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
-                        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0">
+                        <Grid Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Margin="0,5,0,0" ToolTip="{StaticResource cmToolTip}">
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" />
                                 <ColumnDefinition Width="Auto" />
@@ -152,8 +152,8 @@
                                 </TextBlock.Text>
                             </TextBlock>
                         </Grid>
-                        <TextBlock Text="letzter Lauf:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" Padding="5,0,5,7" />
-                        <TextBlock Name="LastRunInfo" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right"
+                        <TextBlock Text="letzter Lauf:" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Left" Padding="5,0,5,7" ToolTip="{StaticResource cmToolTip}" />
+                        <TextBlock Name="LastRunInfo" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" ToolTip="{StaticResource cmToolTip}"
                                        Text="{Binding LastRunInfo}" Padding="5,0,5,7"/>
                     </Grid>
                 </Border>
